<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutHead"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDF3FF"
    tools:context=".view.Settings.SettingsActivity">

    <RelativeLayout
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#1A62AC">

        <ImageView
            android:id="@+id/backRedeem"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@drawable/icon_back" />


        <TextView
            android:id="@+id/toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings_activity"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/video"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/toolbarSettings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/icons_job" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/video"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/buyPackage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/right_arrow"
            android:padding="15dp"
            android:text="@string/buy_package"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            tools:ignore="RtlSymmetry" />

        <View
            android:id="@+id/view0"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/buyPackage"
            android:background="@android:color/darker_gray" />


        <TextView
            android:id="@+id/push_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view0"
            android:layout_alignParentStart="true"
            android:padding="15dp"
            android:text="@string/push_notifications"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <com.suke.widget.SwitchButton
            android:id="@+id/switch_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view0"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            app:sb_checked_color="#10bc04"
            app:sb_show_indicator="false"
            app:sb_uncheckcircle_color="@android:color/darker_gray"
            tools:ignore="RelativeOverlap" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/switch_push"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view1"
            android:drawableEnd="@drawable/right_arrow"
            android:padding="15dp"
            android:text="@string/change_password"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            tools:ignore="RtlSymmetry" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/change_password"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/rate_google_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view2"
            android:drawableEnd="@drawable/right_arrow"
            android:padding="15dp"
            android:text="@string/rate_on_google_play"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rate_google_play"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/share_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view3"
            android:drawableEnd="@drawable/icons_share"
            android:padding="15dp"
            android:text="@string/share_app"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            tools:ignore="RtlSymmetry" />

    </RelativeLayout>


    <ImageView
        android:id="@+id/imgVieww"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/footer_logo" />
</RelativeLayout>