<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/backPurchase"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@drawable/icon_back" />


        <TextView
            android:id="@+id/toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/purchase_activity"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="#EDF3FF"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:src="@drawable/icons_shopping_cart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:text="@string/packages"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="#FFC9CDD6"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewLevelsAdded"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp">
            </androidx.recyclerview.widget.RecyclerView>


            <TextView
                android:id="@+id/add_more_packages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/dashed_border"
                android:drawableStart="@drawable/icons_add"
                android:drawablePadding="20dp"
                android:padding="15dp"
                android:text="@string/add_more_packages"
                android:textColor="#FFC9CDD6"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_Proceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_sign_in"
                android:text="@string/proceed"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>