<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    >

    <RelativeLayout
        android:id="@+id/toolbarChangePassword"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:src="@drawable/icon_back" />


        <TextView
            android:id="@+id/toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/change_password_activity"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo" />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/existing_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:hint="@string/existing_password"
            android:inputType="textWebPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="#6b6a6a" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignBottom="@+id/existing_password"
            android:layout_alignParentStart="true"
            android:background="#d7d7d7" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/existing_password"
            android:background="@android:color/white"
            android:hint="@string/new_password"
            android:inputType="textWebPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="#6b6a6a" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignBottom="@+id/new_password"
            android:layout_alignParentStart="true"
            android:background="#d7d7d7" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/new_password"
            android:background="@drawable/edittextpass"
            android:hint="@string/confirm_password"
            android:inputType="textWebPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="#6b6a6a" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_password"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/button_sign_in"
            android:text="Save"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15sp" />


    </RelativeLayout>


</RelativeLayout>